# wherewolf

./: .envrc  .gitignore  .protocol  AGENTS.md  GEMINI.md  LICENSE  README.md  orchestration.conf  pyproject.toml  run.sh
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: RELEASING.md  agent_protocol.md
docs/agent_conversations/: 2026-03-09_file_browsing.json  2026-03-09_initial_implementation.json  2026-04-19_github_setup.json  2026-04-19_tag_v0.1.0.json  2026-04-21_fix_infinite_loop_regression.json  2026-04-21_schema_hud.json  2026-04-22_multiple_datasets.json  2026-04-22_ui_refinement.json  2026-04-26_default_query_update.json  2026-04-27_file_browser_final_enhancement.json  2026-04-27_file_browser_ui_enhancement.json  2026-04-27_filter_file_browser.json  2026-04-27_release_v0.4.0.json  2026-06-23_full_result_export.json  2026-06-23_polars-migration.json  2026-06-23_pypi-readme-metadata.json  2026-06-24_engine-dialect-results-refactor.json
docs/plans/: 2026-06-23_polars-migration.md  2026-06-24_engine-dialect-results-refactor.md  code_review_fixes.md  core_system_design.md  excel_support.md  execution_engines.md  export_formats.md  file_browser_ui_enhancement.md  file_browsing.md  file_browsing_v2.md  filter_file_browser.md  full_result_export.md  github_automation.md  initial_prompt.md  multiple_datasets.md  schema_hud.md  storage_and_history.md  streamlit_ui.md  ui_layout_refinement.md  update_default_query.py.md
docs/review/: engine-dialect-results-refactor-review-01.md  polars-migration-review-01.md  polars-migration-review-02.md
scripts/: check_tdd.sh  orchestration  take_screenshot.py
scripts/orchestration-hooks/: finalize-release  quality-gates
src/wherewolf/: app.py  cli.py  constants.py  engines.py
src/wherewolf/execution/: __init__.py  duckdb_engine.py  models.py  spark_engine.py
src/wherewolf/export/: exporter.py
src/wherewolf/storage/: __init__.py  history.py
src/wherewolf/translation/: translator.py
src/wherewolf/ui/: __init__.py  file_browser.py  results.py
tests/: reproduce_issue_symlink.py  reproduce_issue_symlink_v2.py  sample_queries.md  test___init__.py  test_app.py  test_app_cancel.py  test_app_flow.py  test_cli.py  test_config_toml.py  test_constants.py  test_data.csv  test_duckdb_engine.py  test_duckdb_sql_injection.py  test_engines.py  test_excel_support.py  test_exporter.py  test_file_browser.py  test_file_browser_errors.py  test_file_browser_filtering.py  test_file_browser_navigation.py  test_file_browser_v2.py  test_history.py  test_history_atomicity.py  test_models.py  test_multi_dataset.py  test_protocol.py  test_results.py  test_spark_engine.py  test_spark_engine_logic.py  test_spark_engine_optimization.py  test_translation_integration.py  test_translator.py  test_ui_branding.py
