[project]
name = "wherewolf"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.0",
    "ibis-framework>=12.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "sqlglot>=29.0.1",
    "streamlit>=1.55.0",
    "streamlit-ace>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wherewolf"]

[project.scripts]
wherewolf = "wherewolf.cli:main"

[tool.uv]
cache-dir = "/tmp/wherewolf/.uv_cache"

[tool.ruff]
line-length = 100
cache-dir = "/tmp/wherewolf/.ruff_cache"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term"
cache_dir = "/tmp/wherewolf/.pytest_cache"

[tool.coverage.run]
data_file = "/tmp/wherewolf/.coverage"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
