[project]
name = "wherewolf"
version = "0.5.2"
description = "A production-grade, local SQL workbench for querying files (CSV, Parquet, JSON) using DuckDB or Spark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "fastexcel>=0.20.2",
    "polars>=1.41.2",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "sqlglot>=30.11.0",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wherewolf"]

[project.scripts]
wherewolf = "wherewolf.cli:main"

[tool.uv]
cache-dir = "/tmp/wherewolf/.uv_cache"

[tool.ruff]
line-length = 100
cache-dir = "/tmp/wherewolf/.ruff_cache"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term"
cache_dir = "/tmp/wherewolf/.pytest_cache"

[tool.coverage.run]
data_file = "/tmp/wherewolf/.coverage"

[dependency-groups]
dev = [
    "hatch>=1.17.0",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
